style.scss
---
---

$padding: 15px;
$npadding: -15px;

@font-face {
	font-family: "Catamaran";
	src: url("_assets/fonts/Catamaran-Regular.ttf");
	font-style: normal;
	font-weight: 400;
	font-display: swap;
}

@font-face {
	font-family: "Catamaran";
	src: url("_assets/fonts/Catamaran-Bold.ttf");
	font-style: normal;
	font-weight: 700;
	font-display: swap;
}

html {
	height: 100%;
}

body {
	height: 100%;
	margin: 0;
	padding: 0;
	overflow-y: scroll;
	
	background-color: #000;
	background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="144" height="144"><defs><symbol id="A"><path d="M81.231 73.846L96 96l22.154-14.769-14.769-22.154-22.154 14.769" fill="%23090a0b" fill-opacity="1" stroke="none"/></symbol></defs><use xlink:href="%23A" x="-22.154" y="-33.231"/><use xlink:href="%23A" x="-55.385" y="-11.077"/><use xlink:href="%23A" x="-33.231" y="22.154"/><use xlink:href="%23A"/><use xlink:href="%23A" x="-44.308" y="-66.462"/><use xlink:href="%23A" x="-77.538" y="-44.308"/><use xlink:href="%23A" x="-11.077" y="55.385"/><use xlink:href="%23A" x="22.154" y="33.231"/><use xlink:href="%23A" x="-88.615" y="11.077"/><use xlink:href="%23A" x="-66.462" y="44.308"/><use xlink:href="%23A" x="-110.769" y="-22.154"/><use xlink:href="%23A" x="-44.308" y="77.538"/><use xlink:href="%23A" x="11.077" y="-55.385"/><use xlink:href="%23A" x="33.231" y="-22.154"/><use xlink:href="%23A" x="-11.077" y="-88.615"/><use xlink:href="%23A" x="55.385" y="11.077"/><use xlink:href="%23A" x="-99.692" y="-77.538"/><use xlink:href="%23A" x="-99.692" y="66.462"/><use xlink:href="%23A" x="44.308" y="66.462"/><use xlink:href="%23A" x="44.308" y="-77.538"/><use xlink:href="%23A" x="-104.647" y="22.599"/></svg>');
	background-position: center;
	
	color: #ddd;
	font-family: "Catamaran", sans-serif;
	font-size: 18px;
	line-height: 1.3;
	letter-spacing: 1px;
}

#wrapper {
	min-height: 100%;
	max-width: 800px;
	box-sizing: border-box;
	margin: auto;
	padding: 0 $padding;
  display: flex;
  flex-direction: column;
	background-color: #131619;
}

#content {
	padding: 0;
  flex: 1 0 auto;
}

header {
	height: 180px;
	box-sizing: border-box;
	position: relative;
	margin: 0 $npadding;
	text-align: right;
	flex-shrink: 0;
	
	color: #ddd;
	color: rgba(255, 255, 255, 0.8);
	
	background-color: #37474f;
	background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="180" width="800"><path d="M0 0v180h360L440 0z" opacity=".1" fill="%23fff"/></svg>');
	background-position: center;
}

.header-wrapper {
	position: absolute;
	bottom: 0;
	right: 0;
	margin: 10px 20px;
	padding: 0;
	line-height: 1;
}

footer {
	margin: 0 $npadding;
	padding: 10px $padding;
	flex-shrink: 0;
	background-color: #1e2226;
}

.title {
	color: #fff;
	font-size: 54px;
	font-weight: bold;
	letter-spacing: 0;
}

a {
	text-decoration: none;
}

a:link {
	color: #29adff;
}

a:visited {
	color: #83769c;
}

a:hover, a:active {
	color: #754665;
}

header a:link, header a:visited {
	color: #ddd;
	color: rgba(255, 255, 255, 0.8);
}

header a:hover, header a:active {
	color: #fff;
}

pre {
	padding: 10px;
	background-color: #000;
	letter-spacing: 0;
}

